--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <li>Email: <span id="email"></span></li>
           <li>Spotify URI: <a id="uri" href="#"></a></li>
           <li>Link: <a id="url" href="#"></a></li>
-          <li>Profile Image: <span id="imgUrl"></span></li>
+          <li>Your top track over the last 6 months is: <span id="topTrack"></span></li>
       </ul>
       </section>
     </body>
