add stub for analyze tracks, added reload link for easier testing

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
           <li>Your top track over the last 6 months is: <span id="topTrack"></span></li>
       </ul>
       </section>
+      <a href="http://localhost:5173/">Click here to reload</a>
     </body>
 </html>
