--- a/index.html
+++ b/index.html
@@ -1,24 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>My Spotify Profile</title>
-        <script src="src/script.js" type="module"></script>
-    </head>
-    <body>
-      <h1>Display your Spotify profile data</h1>
 
-      <section id="profile">
-      <h2>Logged in as <span id="displayName"></span></h2>
-      <span id="avatar"></span>
-      <ul>
-          <li>User ID: <span id="id"></span></li>
-          <li>Email: <span id="email"></span></li>
-          <li>Spotify URI: <a id="uri" href="#"></a></li>
-          <li>Link: <a id="url" href="#"></a></li>
-          <li>Your top track over the last 6 months is: <span id="topTrack"></span></li>
-      </ul>
-      </section>
-      <a href="http://localhost:5173/">Click here to reload</a>
-    </body>
+<head>
+	<meta charset="utf-8">
+	<title>My Spotify Profile</title>
+	<script src="src/script.js" type="module"></script>
+	<link rel="stylesheet" href="src/style.css">
+</head>
+
+<body class="green-theme">
+	<h1>Display your Spotify profile data</h1>
+
+	<section id="profile">
+		<h2>Logged in as <span id="displayName"></span></h2>
+		<span id="avatar"></span>
+		<ul>
+			<li>User ID: <span id="id"></span></li>
+			<li>Email: <span id="email"></span></li>
+			<li>Spotify URI: <a id="uri" href="#"></a></li>
+			<li>Link: <a id="url" href="#"></a></li>
+			<li>Your top track over the last 6 months is: <span id="topTrack"></span></li>
+		</ul>
+	</section>
+
+	<section class="bar-graph bar-graph-horizontal bar-graph-one">
+		<div>
+			<span class="song-dimension">danceability</span>
+			<div class="bar" id="danceability-percentage" data-percentage="69.6%" style="width: 69.6%"></div>
+		</div>
+		<div>
+			<span class="song-dimension">energy</span>
+			<div class="bar" id="energy-percentage" data-percentage="71%" style="width: 71%"></div>
+		</div>
+		<div>
+			<span class="song-dimension">speechiness</span>
+			<div class="bar" id="speechiness-percentage" data-percentage="74.7%" style="width: 74.7%"></div>
+		</div>
+		<div>
+			<span class="song-dimension">acousticness</span>
+			<div class="bar" id="acousticness-percentage" data-percentage="76.8%" style="width: 76.8%"></div>
+		</div>
+		<div>
+			<span class="song-dimension">liveness</span>
+			<div class="bar" id="liveness-percentage" data-percentage="76.8%" style="width: 76.8%"></div>
+		</div>
+		<div>
+			<span class="song-dimension">valence</span>
+			<div class="bar" id="valence-percentage" data-percentage="76.8%" style="width: 76.8%"></div>
+		</div>
+		<div>
+			<span class="song-dimension">instrumentalness</span>
+			<div class="bar" id="instrumentalness-percentage" data-percentage="76.8%" style="width: 76.8%"></div>
+		</div>
+	</section>
+	<br style="clear:both" />
+	<a href="http://localhost:5173/">Click here to reload</a>
+</body>
+
 </html>
