normalize whitespace, draw bar graphs using live data

--- a/index.html
+++ b/index.html
@@ -23,35 +23,7 @@
 		</ul>
 	</section>
 
-	<section class="bar-graph bar-graph-horizontal bar-graph-one">
-		<div>
-			<span class="song-dimension">danceability</span>
-			<div class="bar" id="danceability-percentage" data-percentage="69.6%" style="width: 69.6%"></div>
-		</div>
-		<div>
-			<span class="song-dimension">energy</span>
-			<div class="bar" id="energy-percentage" data-percentage="71%" style="width: 71%"></div>
-		</div>
-		<div>
-			<span class="song-dimension">speechiness</span>
-			<div class="bar" id="speechiness-percentage" data-percentage="74.7%" style="width: 74.7%"></div>
-		</div>
-		<div>
-			<span class="song-dimension">acousticness</span>
-			<div class="bar" id="acousticness-percentage" data-percentage="76.8%" style="width: 76.8%"></div>
-		</div>
-		<div>
-			<span class="song-dimension">liveness</span>
-			<div class="bar" id="liveness-percentage" data-percentage="76.8%" style="width: 76.8%"></div>
-		</div>
-		<div>
-			<span class="song-dimension">valence</span>
-			<div class="bar" id="valence-percentage" data-percentage="76.8%" style="width: 76.8%"></div>
-		</div>
-		<div>
-			<span class="song-dimension">instrumentalness</span>
-			<div class="bar" id="instrumentalness-percentage" data-percentage="76.8%" style="width: 76.8%"></div>
-		</div>
+	<section class="bar-graph-horizontal" id="bar-graph">
 	</section>
 	<br style="clear:both" />
 	<a href="http://localhost:5173/">Click here to reload</a>
